# infinite-width-uq

./: README.md  pyproject.toml  requirements.txt
experiments/: run_diabetes.py  run_qsar.py
notebooks/: results.ipynb
results/tables/: metrics_random.csv  metrics_random.md  metrics_shift.csv  metrics_shift.md
src/iwuq/: __init__.py  data.py  metrics.py  models.py  plotting.py  selective.py
