[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "iwuq"
version = "0.1.0"
description = "Calibrated regression uncertainty with Neural Network Gaussian Processes"
requires-python = ">=3.10"
dependencies = [
    "jax==0.4.28",
    "jaxlib==0.4.28",
    "neural-tangents==0.6.5",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
qsar = ["rdkit"]

[tool.setuptools.packages.find]
where = ["src"]
